# datathon-7mlet-grupo-28

./: README.MD  app.py  dados_sinteticos_bandit_contextual.ipynb  dados_sinteticos_bandit_contextual_testes.ipynb  eda_bank_marketing.ipynb  experimentacao_v2.ipynb  pyproject.toml  requirements.txt  vercel.json
.ipynb_checkpoints/: dados_sinteticos_bandit_contextual-checkpoint.ipynb  experimentacao_v2-checkpoint.ipynb
api/: audit_log.py  bandit.py  main.py  schemas.py
data/golden_set/: evaluation_cases.jsonl  evaluation_cases_offers.csv
data/kaggle/: README.MD
data/policies/: policy_canais.md  policy_explicabilidade.md  policy_suitability_geral.md
data/synthetic_enrichment/: bandit_snapshots.json  delayed_rewards.parquet  offer_catalog.json  offer_events.parquet
frontend/: app.py
models/: thompson_contextual.json  thompson_contextual.pkl
reports/: data-generation.md
