[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datathon-7mlet-grupo-28"
version = "1.0.0"
description = "Simulação de Geração de Dados Sintéticos e Análise Exploratória utilizando Multi-Armed Bandit Contextual (Thompson Sampling)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Grupo 28 - Datathon 7-MLET" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.22.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "scipy>=1.8.0",
    "pyarrow>=11.0.0", # Necessário para ler offer_events.parquet e delayed_rewards.parquet
]

[project.optional-dependencies]
dev = [
    "notebook>=7.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
]

[tool.setuptools]
packages = ["src"]